[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "createfile_Runny1005"
version = "0.0.1"
authors = [
  { name="Runny1005", email="passakorn.kus@gmail.com" },
]
description = "just create file"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Runny1005/createfile"
Issues = "https://github.com/Runny1005/createfile/issues"